buttons to index
Getting started with buttons.
let's first strengthen the foundation of the website and brainstorm where will these buttons will navigate us.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
+<!--By : Orpilla, Chirstopher Jiovanni-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel = "stylesheet" href= "index.css">
+    <title>UCCP Baguio</title>
 </head>
 <body>
-    <h1> This is a plain website</h1>
-    <p>Cool right?</p>
+    <h1> United Church of Christ in the Philippines</h1>
+    <p class="stay"><i>-- Stay Connected.</i></p>
+    <div class="buttons_upper">
+        <button class="Announcements">
+            Announcements
+            <!--put events with Calendar-->
+        </button>
+        <button class="Watch">
+            Watch Live
+            <!--visitors can join Live sermons to be more connected-->
+        </button>
+        <button class="Give">
+            Give
+            <!--Donations-->
+        </button>
+    </div>
+    <div class="buttons_lower">
+        <button class="Learn More">
+            I'm New
+            <!-- 
+                // Visitors can sign up
+                // learn more about the church
+            -->
+        </button>
+        <button class="Sign-up">
+            Get evolved
+            <!-- 
+                Visitors can join:
+                    // membership
+                    //being a teacher
+            -->
+        </button>
+    </div>
 </body>
 </html>
