--- a/home.html
+++ b/home.html
@@ -5,23 +5,41 @@
         <link rel="stylesheet"  href= home.css>
     </head>
     <body>
-        <h1>United Church of Christ in the Philippines</h1>
-        <div>
-            <a href = "join.html">
-                <button class ="Join">
-                    Join us
-                </button>
-            </a>
-            <a href="give.html">
-            <button class = "Give">
-                Give
-            </button class = "About">
-            </a>
-            <a href="about.html">
-            <button >
-                About us
-            </button>
-            </a>
+        <script src ="index.js"></script>
+        <!-- Image church -->
+        <div class="image-church" >
+            <div class= "header">
+                <!--Font-Family should be identical to the paper font-->
+                <h1 class= "head">
+                    United Church of Christ in the Philippines
+                </h1>
+            </div>
+            <!--Container of Buttons-->
+            <div class="buttons">
+                <a href = "join.html">
+                    <button class ="Join">
+                        Join us
+                    </button>
+                </a>
+                <a href="give.html">
+                    <button class = "Give">
+                        Give
+                    </button>
+                </a>
+                <a href="about.html">
+                    <button class = "About">
+                        About us
+                    </button>
+                </a>
+            </div>
+            <section class="text_content">
+                <h1>
+                    "Sustained by God's Amazing Grace"
+                </h1>
+                <p>
+                    1 peter 5:60
+                </p>
+            </section>
          </div>
     </body>
 </html>
