--- a/about.html
+++ b/about.html
@@ -7,6 +7,26 @@
   <link rel="stylesheet" href="about.css">
 </head>
 <body>
+    <!--This is for social Links for connecting-->
+    <div class="connect"> <!-- this is the parent div-->
+        <h3>Connect with UCCP Baguio </h3>
+        <a href="https://www.facebook.com/profile.php?id=100010281698121&sk=about">
+          facebook
+        </a>\
+        <br>
+        <a href = "https://www.google.com/search?q=uccpbaguio%40yahoo.com&rlz=1C1GCEJ_enPH1051PH1051&oq=uccpbaguio%40yahoo.com&aqs=chrome.0.69i59j69i64j69i58.292j0j9&sourceid=chrome&ie=UTF-8">
+          Email
+        </a>
+    </div>
     <h1>Learn more about us</h1>
+    <div class="Buttons"> <!-- this is the parent div-->
+      <!--Consider making an a ref for directing pages-->
+      <button class="Gallery">
+        <p>Gallery</p>
+      </button>
+      <a href = "https://www.google.com/search?rlz=1C1GCEJ_enPH1051PH1051&tbs=lf:1,lf_ui:2&tbm=lcl&sxsrf=AB5stBhQ3c54KgXYFR8SxsrX40SBH6xfgg:1689394896975&q=Otek+St.+Westside+Burnham+Park,+2600&rflfq=1&num=10&rllag=16412085,120592794,162&rldimm=17513418179719637247&ved=2ahUKEwi5vuC17o-AAxV0yjgGHfVxCPAQu9QIegQIGhAL#rlfi=hd:;si:1220037773009534327,l,CiRPdGVrIFN0LiBXZXN0c2lkZSBCdXJuaGFtIFBhcmssIDI2MDBIxvbLx-WAgIAIWjoQAhADEAQQBRgCGAMYBBgFIiJvdGVrIHN0IHdlc3RzaWRlIGJ1cm5oYW0gcGFyayAyNjAwKgQIAhACkgERZWxlbWVudGFyeV9zY2hvb2yqAWsQASoeIhp3ZXN0c2lkZSBidXJuaGFtIHBhcmsgMjYwMCgAMh8QASIbiClv2h98JMENjTscST37zXB1Ys81Ov_BahyKMiYQAiIib3RlayBzdCB3ZXN0c2lkZSBidXJuaGFtIHBhcmsgMjYwMA;mv:[[16.4148547,120.59692020000001],[16.4082783,120.59153149999999]]">
+        <p> Address</p>
+      </a>
+    </div>
 </body>
 </html>
