--- a/home.html
+++ b/home.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- This is The viewport -- A window part of the page that the user can only see-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>United Church of Christ in the Philippines</title>
-        <link rel="stylesheet"  href= home.css>
+        <link rel="stylesheet"  href= "home.css?v=1">
     </head>
     <body>
         <script src ="index.js"></script>
         <!-- Image church -->
-        <div class="image-church" >
+        <div class="image-church" alt = "Main Picture">
             <div class= "header">
                 <!--Font-Family should be identical to the paper font-->
                 <h1 class= "head">
