--- a/give.html
+++ b/give.html
@@ -5,8 +5,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Donation Page</title>
   <link rel="stylesheet" href="give.css">
+  <!-- my favicon -->
+  <link rel="shortcut icon" type = "image/jpg" href = "img/logo.jpg">
 </head>
 <body>
-    <h1>Please Donate for Charity!</h1>
+  <div>
+    <h1>
+      Thank you for your generosity!
+    </h1>
+    <p>
+      <i>
+      We are incredibly grateful for your desire to support Our
+      church's mission. Your generous donations play a crucial
+      role in allowing us to spread love, compassion, and hope
+      in our community and beyond. With your help, we can continue
+      to provide meaningful worship experiences, support those in need,
+      and create a welcoming space for all who seek spiritual growth.
+      Whether you are a member of our congregation or a kind-hearted
+      individual willing to make a difference, your contribution
+      enables us to carry out God's work and make a positive
+      impact on countless lives. Together, we can build a
+      stronger, more compassionate world. Thank you for
+      your unwavering support and faith in our journey.
+    </i>
+    </p>
+  </div>
+  <!--To Main Menu-->
+  <a href="home.html">
+    <button class="goback">
+      back
+    </button>
+  </a>
+  <!--Donation-->
+  <div class="div_don">
+    <h1 class="don_mon">
+      Donate Money 
+    </h1>
+  </div>
+  <h2>Support Our Church's Mission</h2>
+  <!--If pushed then direct to the page within the page-->
+  <a href="home.html">
+    <button class="Donate">
+      Donate
+    </button>
+  </a>
 </body>
 </html>
