--- a/home.html
+++ b/home.html
@@ -5,13 +5,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>United Church of Christ in the Philippines</title>
         <link rel="stylesheet"  href= "home.css?v=1">
+        <!-- my favicon -->
+        <link rel="shortcut icon" type = "image/jpg" href = "img/logo.jpg">
     </head>
     <body>
-        <script src ="index.js"></script>
+        <!-- this is the link for javaScript(home)-->
+        <script src ="home.js"></script>
+        <!--logo for the church-->
+        <div class = "logo" alt ="Logo Church">
+        </div>
         <!-- Image church -->
         <div class="image-church" alt = "Main Picture">
             <div class= "header">
                 <!--Font-Family should be identical to the paper font-->
+                <h1 class= "uccp">UCCP|Baguio</h1>
                 <h1 class= "head">
                     United Church of Christ in the Philippines
                 </h1>
@@ -19,7 +26,7 @@
             <!--Container of Buttons-->
             <div class="buttons">
                 <a href = "join.html">
-                    <button class ="Join">
+                    <button class ="Join">  
                         Join us
                     </button>
                 </a>
@@ -38,8 +45,9 @@
                 <h1>
                     "Sustained by God's Amazing Grace"
                 </h1>
-                <p>
+                <p><i>
                     1 peter 5:60
+                </i>
                 </p>
             </section>
          </div>
