--- a/join.html
+++ b/join.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join us!</title>
     <link rel="stylesheet"  href= join.css>
+    <!-- my favicon -->
+    <link rel="shortcut icon" type = "image/jpg" href = "img/logo.jpg">
   </head>
   <body>
       <h1>Want to Join?</h1>
@@ -14,5 +16,13 @@
         re-confirm
         verification
       -->
+      <!--To Main Menu-->
+      <a href="home.html">
+        <button>
+          <p>
+            back
+          </p>
+        </button>
+      </a>
   </body>
 </html>
