added (pics, contents)

--- a/give.html
+++ b/give.html
@@ -13,8 +13,7 @@
     <h1>
       Thank you for your generosity!
     </h1>
-    <p>
-      <i>
+    <p style="size:10px;">
       We are incredibly grateful for your desire to support Our
       church's mission. Your generous donations play a crucial
       role in allowing us to spread love, compassion, and hope
@@ -27,7 +26,6 @@
       impact on countless lives. Together, we can build a
       stronger, more compassionate world. Thank you for
       your unwavering support and faith in our journey.
-    </i>
     </p>
   </div>
   <!--To Main Menu-->
@@ -49,5 +47,6 @@
       Donate
     </button>
   </a>
+  <hr>
 </body>
 </html>
