--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>United Church of Christ in the Philippines</title>
         <link rel="stylesheet"  href= "home.css?v=1">
+        <link rel="--Font-Family" href = "fonts/Quicksand/Quicksand-VariableFont_wght.ttf">
         <!-- my favicon -->
         <link rel="shortcut icon" type = "image/jpg" href = "img/logo.jpg">
     </head>
