--- a/about.html
+++ b/about.html
@@ -29,12 +29,12 @@
       </li>
       <li>
         <a href = "https://www.google.com/search?rlz=1C1GCEJ_enPH1051PH1051&tbs=lf:1,lf_ui:2&tbm=lcl&sxsrf=AB5stBhQ3c54KgXYFR8SxsrX40SBH6xfgg:1689394896975&q=Otek+St.+Westside+Burnham+Park,+2600&rflfq=1&num=10&rllag=16412085,120592794,162&rldimm=17513418179719637247&ved=2ahUKEwi5vuC17o-AAxV0yjgGHfVxCPAQu9QIegQIGhAL#rlfi=hd:;si:1220037773009534327,l,CiRPdGVrIFN0LiBXZXN0c2lkZSBCdXJuaGFtIFBhcmssIDI2MDBIxvbLx-WAgIAIWjoQAhADEAQQBRgCGAMYBBgFIiJvdGVrIHN0IHdlc3RzaWRlIGJ1cm5oYW0gcGFyayAyNjAwKgQIAhACkgERZWxlbWVudGFyeV9zY2hvb2yqAWsQASoeIhp3ZXN0c2lkZSBidXJuaGFtIHBhcmsgMjYwMCgAMh8QASIbiClv2h98JMENjTscST37zXB1Ys81Ov_BahyKMiYQAiIib3RlayBzdCB3ZXN0c2lkZSBidXJuaGFtIHBhcmsgMjYwMA;mv:[[16.4148547,120.59692020000001],[16.4082783,120.59153149999999]]" target="_blank">
-          Address
+          location
         </a>
       </li>
     </ul>
   </div>
-  <h1>Learn more about us</h1>
+  <h1> Learn more about us </h1>
   </div>
   <!--To Main Menu-->
   <a href="home.html">
@@ -42,5 +42,50 @@
       <p>back</p>
     </button>
   </a>
+  <br>
+  <fieldset style="text-align: center;">
+    <p>
+      In light of such a Vision, the UCCP, therefore, commits itself to the mission of establishing and uniting the community of 
+      faith for the proclamation of the Gospel of our Lord Jesus Christ towards the transformation of both church and society.
+    </p>
+  </fieldset>
+  <h2>UCCP</h2>
+  <fieldset >
+    <legend>How we started</legend>
+     <p>
+      The United Church of Christ in the Philippines (UCCP) is an indigenous evangelical church formed by the union of Protestant Mission churches and institutions in 1948. This union includes the Presbyterian, Philippine Methodist, Brethren, Disciples and Congregational Churches.
+
+      We are a vibrant and diverse community of 500,000 members with 2,492 pastors in 2,850 local churches and worship congregations all over the Philippines. We guide our members in their journey of Christian faith and witness. We equip them to lead a healthy congregational life and to engage in active ministry with their local community.
+      
+      We work for human rights, justice, peace, and the integrity of creation. We are a church that gladly welcomes change. And we are so glad to welcome you here in our website.
+     </p>
+     <li>Mission
+      <p>A responsible, empowered, self-reliant and caring community of Christian believers committed to the pursuit of a transformed church and society towards an abundant and meaningful life for all.</p>
+     </li>
+     <li>Vision
+      <p>
+        Establishing and uniting the community of faith for the proclamation of the Gospel of our Lord Jesus Christ towards the transformation of both church and society.
+      </p>
+     </li>
+  </fieldset>
+  <h2>Sunday School</h2>
+    <fieldset>
+      <legend>Teachers</legend>
+      <p>There are also Sunday Teachers to teach your children and further expand their knowledge about the words of God.
+        They also partake fun activities such as but not limited to:
+      </p>
+      <li>Games</li>
+      <li>Dancing</li>
+      <li>Singing</li>
+      <li>Drawings </li>
+
+      <p>!! Currently, UCCP Baguio is short on Sunday Teacher(s). Want to <a href = "join.html">join</a>?</p>
+    </fieldset>
+    <h2>Sunday School</h2>
+    <fieldset>
+      <legend>Teachers<legend>
+
+    </fieldset>
+
 </body>
 </html>
