renamed 'home' to 'index'

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
   <h1> Learn more about us </h1>
   </div>
   <!--To Main Menu-->
-  <a href="home.html">
+  <a href="index.html">
     <button class="back">
       <p>back</p>
     </button>
