--- a/give.html
+++ b/give.html
@@ -29,7 +29,7 @@
     </p>
   </div>
   <!--To Main Menu-->
-  <a href="home.html">
+  <a href="index.html">
     <button class="goback">
       back
     </button>
