--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <!-- This is The viewport -- A window part of the page that the user can only see-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>United Church of Christ in the Philippines</title>
-        <link rel="stylesheet"  href= "home.css?v=1">
+        <link rel="stylesheet"  href= "index.css">
         <link rel="--Font-Family" href = "fonts/Quicksand/Quicksand-VariableFont_wght.ttf">
         <!-- my favicon -->
         <link rel="shortcut icon" type = "image/jpg" href = "img/logo.jpg">
