--- a/join.html
+++ b/join.html
@@ -17,7 +17,7 @@
         verification
       -->
       <!--To Main Menu-->
-      <a href="home.html">
+      <a href="index.html">
         <button>
           <p>
             back
